--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<nav>
 			<a href=http://twitter.com/kevnkl>twitter</a>
-			<a href="#">Developer website</a> 
+			<a href="https://github.com/KKLee0928">Developer website</a> 
 			<a href="#">Instructions</a> 
 			<a hrf="#">Game</a>
 		</nav>
@@ -33,13 +33,14 @@
 			
 			<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Paris, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 
-			<div>
+			<div id="game-board" class="board clearfix"></div>
+<!-- 			<div>
 				<img src="images/back.png" alt="queen of Diamonds">
 				<img src="images/back.png" alt="Queen of Hearts">
 				<img src="images/back.png" alt="King of Diamonds">
 				<img src="images/back.png" alt="King of Hearts">
 			</div>
-		</main>
+ -->		</main>
 		
 		<footer class="clearfix">
 			
